--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I'm a versatile web designer, ethical hacker, and freelancer with strong skills in HTML, CSS, JavaScript, Python, C, and C++. I'm passionate about creating visually stunning websites with seamless functionality and have honed my craft on platforms like Freelancer.com. Additionally, I bring creativity and expertise to video editing, enhancing footage and adding captivating effects. I thrive in collaborative environments, am always eager to expand my knowledge, and am ready to bring your ideas to life online. Let's create something remarkable together.</p>
                         <div data-aos="fade-up" data-aos-delay="600" class="text-">
                             <a href="#work" class="btn btn-brand me-3 mb-2">Explore My Work</a>
-                            <a href="https://drive.google.com/file/d/1dTb9rDG3XNxOxH1Yf-9UH8uQq666Y-yT/view?usp=sharing" class="btn btn-brand me-3 mb-2" target="_blank">View Resume</a>
+                            <a href="https://bit.ly/44xOHnl" class="btn btn-brand me-3 mb-2" target="_blank">View Resume</a>
                             <div class="d-block d-md-inline">
                                 <a href="mailto:pralin.khaira.1903@gmail.com" class="link-custom">Email: pralin.khaira.1903@gmail.com</a>&emsp;
                                 <a href="tel: +917780831020" class="link-custom">Call: (+91) 7780831020</a>
@@ -400,18 +400,24 @@
                 </div>
 
                 <div class="row gy-5 extra-section" data-aos="fade-up">
-                    <div class="col-lg-12">
+                    <div class="col-lg-10">
                         <div class="row row-cols-1 row-cols-md-2 gy-4">
 
                             <div class="col-md-6">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Under Development</h4>
-                                    <p class="text-brand mb-2">~</p>
-                                    <p class="text-brand mb-2">~</p>
-                                    <p class="text-brand mb-2">Skills In Use - </p>
-                                    <p class="mb-0">→ This section is currently under Development.</p>
-                                    <p class="mb-0">→ Under Development.</p>
-                                    <p class="mb-0">→ Under Development.</p>
+                                    <img class="rounded-4" src="./assets/miscellaneous/kavach-markup.png" alt="">
+                                    <h5>  </h5>
+                                    <h4>KAVACH 2023 Hackathon</h4>
+                                    <p class="text-brand mb-2">April 2023 - June 2023</p>
+                                    <p class="text-brand mb-2">Organised by: <a href="https://kavach.mic.gov.in/#about" class="link-custom" target="_blank">MoE, AICTE, BPR&D And I4C</a></p>
+                                    <p class="text-brand mb-2">Team Lead - Team M.A.R.K.U.P </p>
+                                    <p class="text-brand mb-2">Skills In Use - HTML, CSS, JS, TensorFlow, JSON, Python, AI & ML</p>
+                                    <p class="mb-0">→ Based upon problem statement, the solution proposed involves developing WEB EXTENSION called FAID [ Ph(F)ishing (A)ttack (I)(D)entifier ].</p>
+                                    <p class="mb-0">→ The plugin can work with various social media and e-mail apps to provide a comprehensive security solution.</p>
+                                    <p class="mb-0">→ FAID uses a self - trained AI model which has been developed after comparing different AI models.</p>
+                                    <p class="mb-0">→ The outcome may/may not be in our favour, but having a great crew adds upto spirit for participation. I would like to thank my team members!</p>
+                                    <a href="https://drive.google.com/file/d/16VCXGxcdnYGRZioUQnqbG12dRreIe4YO/view?usp=sharing" class="link-custom" target="_blank">Problem Statement</a>&emsp;
+                                    <a href="https://drive.google.com/file/d/1hQuWwYZogTXJUbhXjAPQ2vyHXKOq2aPv/view?usp=sharing" class="link-custom" target="_blank">Our Solution!</a>&emsp;                                    
                                 </div>
                             </div>
                     </div>
@@ -696,7 +702,7 @@
                                     </div>
                                     <div class="card-custom-content p-4">
                                         <p class="text-brand mb-2">18 Dec, 2022</p>
-                                        <h5 class="mb-4">PCB Design using OrCAD/Allegro from Basics to Expert</h5>
+                                        <h5 class="mb-4">PCB Design using OrCAD/Allegro</h5>
                                         <p class="text-brand mb-2">Udemy</p>
                                         <a href="https://www.udemy.com/certificate/UC-f3e395bd-08a4-4d5d-99c1-f3a10bd8d731/" class="link-custom" target=”_blank”>View Certificate</a>
                                     </div>
@@ -726,6 +732,19 @@
                                         <h5 class="mb-4">Python BootCamp</h5>
                                         <p class="text-brand mb-2">Skill Academy</p>
                                         <a href="https://drive.google.com/file/d/1zRTOGkIAM_1gaw3tuqyUtoKdmnpyR8kV/view?usp=sharing" class="link-custom" target=”_blank”>View Certificate</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                                <div class="card-custom rounded-4 bg-base shadow-effect">
+                                    <div class="card-custom-image rounded-4">
+                                        <img class="rounded-4" src="./assets/certificates/devfest-gdg.jpg" alt="">
+                                    </div>
+                                    <div class="card-custom-content p-4">
+                                        <p class="text-brand mb-2">19 Dec, 2022</p>
+                                        <h5 class="mb-4">DevFest GDG Jammu</h5>
+                                        <p class="text-brand mb-2">Google</p>
+                                        <a href="https://drive.google.com/file/d/1Yg1Z3iDR-u9xm8p-0_OLxPINRQkqPwT2/view?usp=sharing" class="link-custom" target=”_blank”>View Certificate</a>
                                     </div>
                                 </div>
                             </div>
