--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 </div>
 
                 <div class="row gy-5 extra-section" data-aos="fade-up">
-                    <div class="col-lg-10">
+                    <div class="col-lg-9">
                         <div class="row row-cols-1 row-cols-md-2 gy-4">
 
                             <div class="col-md-6">
@@ -410,7 +410,7 @@
                                     <h4>KAVACH 2023 Hackathon</h4>
                                     <p class="text-brand mb-2">April 2023 - June 2023</p>
                                     <p class="text-brand mb-2">Organised by: <a href="https://kavach.mic.gov.in/#about" class="link-custom" target="_blank">MoE, AICTE, BPR&D And I4C</a></p>
-                                    <p class="text-brand mb-2">Team Lead - Team M.A.R.K.U.P </p>
+                                    <p class="text-brand mb-2">Team Name M.A.R.K.U.P, Team Lead - Pralin Khaira </p>
                                     <p class="text-brand mb-2">Skills In Use - HTML, CSS, JS, TensorFlow, JSON, Python, AI & ML</p>
                                     <p class="mb-0">→ Based upon problem statement, the solution proposed involves developing WEB EXTENSION called FAID [ Ph(F)ishing (A)ttack (I)(D)entifier ].</p>
                                     <p class="mb-0">→ The plugin can work with various social media and e-mail apps to provide a comprehensive security solution.</p>
