--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
                                     <p class="mb-0">→ Internship still in progress.</p>
                                     <p class="mb-0">→ This section will be updated after internship completion.</p>&emsp;
                                     <a href="https://drive.google.com/file/d/1CEMPLIDNGNfzO7eKD2g1wBO7C5m83iWz/view?usp=sharing" class="link-custom" target="_blank">Offer Letter</a>&emsp;
-                                    <a href="#" class="link-custom" target="_blank">Projects (GitHub)</a>&emsp;
-                                    <a href="#" class="link-custom" target="_blank">Certificate</a>
+                                    <a href="https://github.com/pralinkhaira/CodeClause-Internship-Projects" class="link-custom" target="_blank">Projects (GitHub)</a>&emsp;
+                                    <a href="https://drive.google.com/file/d/1CEMPLIDNGNfzO7eKD2g1wBO7C5m83iWz/view?usp=sharing" class="link-custom" target="_blank">Certificate</a>
                                 </div>
                             </div>
 
