--- a/index.html
+++ b/index.html
@@ -300,12 +300,14 @@
         
                             <div class="col-md-6">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>On-Premise Sales Job Simulation</h4>
-                                    <p class="text-brand mb-2">September 2023</p>
-                                    <p class="text-brand mb-2">RedBull (Remote - Forge)</p>
-                                    <p class="text-brand mb-2">Skills In Use - Customer Engagement, Product Knowledge, Communication, Negotiation, Relationship Building, Presentation Skills, Time Management.</p>
-                                    <p class="mb-0">→ Analyze data about accounts to identify key trends and opportunities for sales growth and communicate my insights.</p>
-                                    <p class="mb-0">→ Learned how to respond to objections raised during the sales process to help close the sale.</p>
+                                    <h4>Full Stack Web Developer</h4>
+                                    <p class="text-brand mb-2">October 2023 - November 2023</p>
+                                    <p class="text-brand mb-2">Bharat Intern (Remote - Forge)</p>
+                                    <p class="text-brand mb-2">Skills In Use - Frontend and Backend Developmen,User Interface (UI) Design, User Experience (UX) Design, Problem Solving, Debugging, Version Control. </p>
+                                    <p class="mb-0">→ Active participation in frontend and backend development, database management, problem-solving of web applications. Along with that I do possess good hold in HTML, CSS, and JavaScript</p>
+                                    <a href="https://drive.google.com/file/d/1CMv1d6fFBy3NFfOcjn40uHNZu5RH-hLx/view?usp=sharing" class="link-custom" target="_blank">Offer Letter</a>&emsp;
+                                    <a href="https://github.com/pralinkhaira/Bharat.Intern-Internship-Projects" class="link-custom" target="_blank">Projects (GitHub)</a>&emsp;
+                                    <a href="https://drive.google.com/file/d/1CEMPLIDNGNfzO7eKD2g1wBO7C5m83iWz/view?usp=sharing" class="link-custom" target="_blank">Certificate</a>
                                 </div>
                             </div>
 
@@ -319,7 +321,7 @@
                                     <p class="mb-0">→ This section will be updated after internship completion.</p>&emsp;
                                     <a href="https://drive.google.com/file/d/1CEMPLIDNGNfzO7eKD2g1wBO7C5m83iWz/view?usp=sharing" class="link-custom" target="_blank">Offer Letter</a>&emsp;
                                     <a href="https://github.com/pralinkhaira/CodeClause-Internship-Projects" class="link-custom" target="_blank">Projects (GitHub)</a>&emsp;
-                                    <a href="https://drive.google.com/file/d/1CEMPLIDNGNfzO7eKD2g1wBO7C5m83iWz/view?usp=sharing" class="link-custom" target="_blank">Certificate</a>
+                                    <a href="https://drive.google.com/file/d/13cgrzeaJIFnGbxBgscNz65gJh0_3euGq/view?usp=sharing" class="link-custom" target="_blank">Certificate</a>
                                 </div>
                             </div>
 
