--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I'm a versatile web designer, ethical hacker, and freelancer with strong skills in HTML, CSS, JavaScript, Python, C, and C++. I'm passionate about creating visually stunning websites with seamless functionality and have honed my craft on platforms like Freelancer.com. Additionally, I bring creativity and expertise to video editing, enhancing footage and adding captivating effects. I thrive in collaborative environments, am always eager to expand my knowledge, and am ready to bring your ideas to life online. Let's create something remarkable together.</p>
                         <div data-aos="fade-up" data-aos-delay="600" class="text-">
                             <a href="#work" class="btn btn-brand me-3 mb-2">Explore My Work</a>
-                            <a href="https://drive.google.com/file/d/1dTb9rDG3XNxOxH1Yf-9UH8uQq666Y-yT/view?usp=sharing" class="btn btn-brand me-3 mb-2" target="_blank">View Resume</a>
+                            <a href="https://drive.google.com/file/d/1wh5Y583GlmCHQkVOEeLB1TPiktmPHsUK/view?usp=drive_link" class="btn btn-brand me-3 mb-2" target="_blank">View Resume</a>
                             <div class="d-block d-md-inline">
                                 <a href="mailto:pralin.khaira.1903@gmail.com" class="link-custom">Email: pralin.khaira.1903@gmail.com</a>&emsp;
                                 <a href="tel: +917780831020" class="link-custom">Call: (+91) 7780831020</a>
