--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                             <a href="#work" class="btn btn-brand me-3 mb-2">Explore My Work</a>
                             <a href="https://bit.ly/49KfPDB" class="btn btn-brand me-3 mb-2" target="_blank">View Resume</a>
                             <div class="d-block d-md-inline">
-                                <a href="mailto:pralin.khaira.1903@gmail.com" class="link-custom">Email: pralin.khaira.1903@gmail.com</a>&emsp;
-                                <a href="tel: +917780831020" class="link-custom">Call: (+91) 7780831020</a>
+                                <a href="mailto:pralin.khaira.1903@gmail.com" class="link-custom">Mail Me <3</a>&emsp;
+                                <a href="tel: +917780831020" class="link-custom">Call Me :)</a>
                             </div>
                         </div>
                     </div>
