--- a/flowers/index.html
+++ b/flowers/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>With Love From Your KuchuPuchu</title>
+    <title>With Love For My BBG</title>
 </head>
 <body class="container">
     <div class="night"></div>
