--- a/index.html
+++ b/index.html
@@ -430,17 +430,35 @@
                                     <img class="rounded-4" src="./assets/miscellaneous/kavach-markup.png" alt="">
                                     <h5>  </h5>
                                     <h4>KAVACH 2023 Hackathon</h4>
-                                    <p class="text-brand mb-2">April 2023 - June 2023</p>
-                                    <p class="text-brand mb-2">Organised by: <a href="https://kavach.mic.gov.in/#about" class="link-custom" target="_blank">MoE, AICTE, BPR&D And I4C</a></p>
-                                    <p class="text-brand mb-2">Team Name M.A.R.K.U.P</p>
-                                    <p class="text-brand mb-2">Team Lead - Pralin Khaira </p>
-                                    <p class="text-brand mb-2">Skills In Use - HTML, CSS, JS, TensorFlow, JSON, Python, AI & ML</p>
+                                    <p class="mb-2">April 2023 - June 2023</p>
+                                    <p class="mb-2"><span class="text-brand">Organised by:</span> <a href="https://kavach.mic.gov.in/#about" class="link-custom" target="_blank">MoE, AICTE, BPR&D And I4C</a></p>
+                                    <p class="mb-2"><span class="text-brand">Team Name</span> M.A.R.K.U.P</p>
+                                    <p class="mb-2"><span class="text-brand">Team Lead -</span> Pralin Khaira </p>
+                                    <p class="mb-2"><span class="text-brand">Skills In Use -</span> HTML, CSS, JS, TensorFlow, JSON, Python, AI & ML</p>
                                     <p class="mb-0">→ Based upon problem statement, the solution proposed involves developing WEB EXTENSION called FAID [ Ph(F)ishing (A)ttack (I)(D)entifier ].</p>
                                     <p class="mb-0">→ The plugin can work with various social media and e-mail apps to provide a comprehensive security solution.</p>
                                     <p class="mb-0">→ FAID uses a self - trained AI model which has been developed after comparing different AI models.</p>
                                     <p class="mb-0">→ The outcome may/may not be in our favour, but having a great crew adds upto spirit for participation. I would like to thank my team members!</p>
                                     <a href="https://drive.google.com/file/d/16VCXGxcdnYGRZioUQnqbG12dRreIe4YO/view?usp=sharing" class="link-custom" target="_blank">Problem Statement</a>&emsp;
                                     <a href="https://drive.google.com/file/d/1hQuWwYZogTXJUbhXjAPQ2vyHXKOq2aPv/view?usp=sharing" class="link-custom" target="_blank">Our Solution!</a>&emsp;                                    
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="bg-base p-4 rounded-4 shadow-effect">
+                                    <img class="rounded-4" src="./assets/miscellaneous/ctf-event.png" alt="">
+                                    <h5>  </h5>
+                                    <h4>Speaker Session – CTF Event at EKATVA SMVDU</h4>
+                                    <p class="mb-2">March 2025</p>
+                                    <p class="mb-2"><span class="text-brand">Organised by:</span> Shri Mata Vaishno Devi University x BSides Jammu</p>
+                                    <p class="mb-2"><span class="text-brand">Speaker –</span> Pralin Khaira</p>
+                                    <p class="mb-2"><span class="text-brand">Topic –</span> Development & Automation in Cybersecurity and Bug Bounty</p>
+                                    <p class="mb-0">→ Delivered an in-depth talk on how automation enhances efficiency in cybersecurity practices and bug bounty operations.</p>
+                                    <p class="mb-0">→ Covered real-world case studies, practical tooling, and strategies to "hack smart" instead of "hack hard."</p>
+                                    <p class="mb-0">→ The session saw active participation from students and cybersecurity enthusiasts, sparking discussions and knowledge sharing.</p>
+                                    <p class="mb-0">→ Huge thanks to Soumitra Rai and the organizing team for the warm hospitality and seamless execution of the event!</p>
+                                    <a href="https://www.instagram.com/p/DGvBsTmTqEY" class="link-custom" target="_blank">Instagram Post</a>&emsp;
+                                    <a href="https://www.linkedin.com/posts/pralin-khaira-bb462a252_cybersecurity-bugbounty-ctf-activity-7303744325438291969-Ji4J" class="link-custom" target="_blank">LinkedIn Post</a>&emsp;                                    
                                 </div>
                             </div>
                     </div>
