--- a/index.html
+++ b/index.html
@@ -62,9 +62,19 @@
 
                 </ul>
             </div>
+            
+            <!-- Theme Toggle Button for Desktop -->
+            <button class="theme-toggle d-none d-lg-block" id="themeToggle" title="Toggle Day/Night Mode">
+                <i class="las la-sun"></i>
+            </button>
         </div>
     </nav>
     <!-- //NAVBAR -->
+
+    <!-- THEME TOGGLE BUTTON FOR MOBILE -->
+    <button class="theme-toggle d-lg-none" id="themeToggleMobile" title="Toggle Day/Night Mode">
+        <i class="las la-sun"></i>
+    </button>
 
     <!-- CONTENT WRAPPER -->
     <div id="content-wrapper">
@@ -331,34 +341,6 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Android Development Intern</h4>
-                                    <p class="text-brand mb-2">Octuber 2023 - November 2023</p>
-                                    <p class="text-brand mb-2">CodeClause (Remote)</p>
-                                    <p class="text-brand mb-2">Skills In Use - Kotlin Programming, Android Studio, XML Layouts, User Interface (UI) Design, Debugging and Testing, Version Control (e.g., Git), API Integration, Firebase, Mobile App Development</p>
-                                    <p class="mb-0">→ Internship still in progress.</p>
-                                    <p class="mb-0">→ This section will be updated after internship completion.</p>&emsp;
-                                    <a href="https://drive.google.com/file/d/1CEMPLIDNGNfzO7eKD2g1wBO7C5m83iWz/view?usp=sharing" class="link-custom" target="_blank">Offer Letter</a>&emsp;
-                                    <a href="https://github.com/pralinkhaira/CodeClause-Internship-Projects" class="link-custom" target="_blank">Projects (GitHub)</a>&emsp;
-                                    <a href="https://drive.google.com/file/d/13cgrzeaJIFnGbxBgscNz65gJh0_3euGq/view?usp=sharing" class="link-custom" target="_blank">Certificate</a>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Android App Developer Intern</h4>
-                                    <p class="text-brand mb-2">Octuber 2023 - November 2023</p>
-                                    <p class="text-brand mb-2">CodSoft (Remote)</p>
-                                    <p class="text-brand mb-2">Skills In Use - Kotlin Programming, Android Studio, XML Layouts, User Interface (UI) Design, Debugging and Testing, Version Control (e.g., Git), API Integration, Firebase, Mobile App Development</p>
-                                    <p class="mb-0">→ Internship still in progress.</p>
-                                    <p class="mb-0">→ This section will be updated after internship completion.</p>&emsp;
-                                    <a href="https://drive.google.com/file/d/11fcjTOpa-2aOvhLvnvUz2mCFzonfQCy3/view?usp=sharing" class="link-custom" target="_blank">Offer Letter</a>&emsp;
-                                    <a href="https://github.com/pralinkhaira/CodSoft-Internship-Projects" class="link-custom" target="_blank">Projects (GitHub)</a>&emsp;
-                                    <a href="https://drive.google.com/file/d/11fcjTOpa-2aOvhLvnvUz2mCFzonfQCy3/view?usp=sharing" class="link-custom" target="_blank">Certificate</a>
-                                </div>
-                            </div>
-        
                             <div class="col-md-6">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Blogging - Beyond Coding!</h4>
