--- a/index.html
+++ b/index.html
@@ -87,8 +87,13 @@
                         <div class="wrapper">
                             <div class="static-txt">I'm a</div>
                             <ul class="dynamic-txts">
+                                <div class="floating-shapes">
+                                    <div class="shape"></div>
+                                    <div class="shape"></div>
+                                    <div class="shape"></div>
+                                </div>
                                 <li><span>Developer</span></li>
-                                <li><span>Gamer</span></li>
+                                <li><span>DSA Solver</span></li>
                                 <li><span>Ethical Hacker</span></li>
                                 <li><span>Designer</span></li>
                                 <li><span>Problem Solver</span></li>
