--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                     </div>
                     <div class="col-auto">
                         <div class="social-icons">
-                            <a href="https://www.linkedin.com/in/pralin-khaira-bb462a252/" target=”_blank”><i class="lab la-linkedin"></i></i></i></a>
+                            <a href="https://www.linkedin.com/in/pralinkhaira/" target=”_blank”><i class="lab la-linkedin"></i></i></i></a>
                             <a href="mailto: pralin.khaira.1903@gmail.com"><i class="las la-envelope"></i></i></a>
                             <a href="https://github.com/pralinkhaira" target=”_blank”><i class="lab la-github"></i></a>
                             <a href="https://www.facebook.com/pralin.khaira.5/" target=”_blank”><i class="lab la-facebook"></i></a>
