--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <span class="btn-text">Explore My Work</span>
                                 <span class="btn-icon">🚀</span>
                             </a>
-                            <a href="https://bit.ly/49KfPDB" class="btn btn-brand me-3 mb-2 btn-hover-slide" target="_blank">
+                            <a href="https://drive.google.com/file/d/14JcEkdm40r_fEIkkBBFLdKOz7PTXOlm_/view?usp=sharing" class="btn btn-brand me-3 mb-2 btn-hover-slide" target="_blank">
                                 <span class="btn-text">View Resume</span>
                                 <span class="btn-icon">📄</span>
                             </a>
