--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                                 <span class="btn-text">Call Me</span>
                                 <span class="btn-icon">📞</span>
                             </a>
+                            <a href="https://www.linkedin.com/in/pralinkhaira/" class="btn btn-brand me-3 mb-2 btn-hover-slide" target="_blank">
+                                <span class="btn-text">LinkedIn</span>
+                                <span class="btn-icon"><i class="lab la-linkedin"></i></span>
+                            </a>
                         </div>
                     </div>
                 </div>
